--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title TT01
+title: Your awesome title TT01bbb
 email: your-email-TT02@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   TT03 Write an awesome description for your new site here. You can edit this
