--- a/_config.yml
+++ b/_config.yml
@@ -18,14 +18,13 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Zip tie AI drones (.com) 24.0307
+title: ZipTieAI.com (AI drones) blog 
 email: terrytaylorbonn@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  (edit this line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.)
+  For latest overview and docs see https://github.com/terrytaylorbonn/auxdrone/wiki.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://ziptieai.com" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: (none)
+twitter_username: (xxx)
 github_username:  (xxx)
 
 # Build settings
