--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,9 @@
 # in the templates via {{ site.myvariable }}.
 
 title: ZiptieAI.com (AI drones) website
-email: terrytaylorbonn@gmail.com
+email: ziptieai@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
- Last edit 24.0512
+ Last edit 24.0515
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://ziptieai.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
