--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: ZiptieAI.com (AI drones) website v2222222
+title: ZiptieAI.com (v2)
 email: ziptieai@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
- Last edit 24.0528 
+ Last edit 25.0228 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://ziptieai.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
