--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: ZiptieAI.com
 email: terrytaylorbonn@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
- Last edit 25.0310
+ Last edit 25.0310b
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://ziptieai.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
